policies - set evaluation interval to be shorter

--- a/kustomize/bases/openshift-gitops-policies/PolicyGenerator_cluster-management.yaml
+++ b/kustomize/bases/openshift-gitops-policies/PolicyGenerator_cluster-management.yaml
@@ -17,6 +17,9 @@ policyDefaults:
   complianceType: musthave
   severity: critical
   informGatekeeperPolicies: false
+  evaluationInterval:
+    compliant: 10s
+    noncompliant: 10s
 
 policySetDefaults:
   generatePolicySetPlacement: true
