--- a/kustomize/bases/acm-policies-openshift-gitops/PolicyGenerator_tenant-management.yaml
+++ b/kustomize/bases/acm-policies-openshift-gitops/PolicyGenerator_tenant-management.yaml
@@ -36,4 +36,4 @@ policies:
 
 policySets:
 - name: tenant-management
-  description: Tenant management policies related to deploying, configuring, and monitoring tenant gitops components
+  description: tenant management policies related to deploying, configuring, and monitoring tenant gitops components
