--- a/kustomize/bases/acm-policies-openshift-gitops/kustomization.yaml
+++ b/kustomize/bases/acm-policies-openshift-gitops/kustomization.yaml
@@ -16,4 +16,5 @@ resources:
 
 generators:
 - PolicyGenerator_cluster-management.yaml
-- PolicyGenerator_tenant-management.yaml
+# TODO: Temporarily disable as this is broken, troubleshooting in-progress.
+# - PolicyGenerator_tenant-management.yaml
