--- a/kustomize/bases/acm-policies-openshift-gitops/policy-manifests/cluster-management/validate-cluster-management-applications/K8sRequiredManifestSubset_infra-apps-healthy-and-synced.yaml
+++ b/kustomize/bases/acm-policies-openshift-gitops/policy-manifests/cluster-management/validate-cluster-management-applications/K8sRequiredManifestSubset_infra-apps-healthy-and-synced.yaml
@@ -23,7 +23,7 @@ spec:
       - key: app.kubernetes.io/name
         operator: NotIn
         values:
-        - acm-policies
+        - acm-policies-openshift-gitops
   parameters:
     manifest_subset:
       status:
