--- a/kustomize/bases/openshift-gitops-operator/kustomization.yaml
+++ b/kustomize/bases/openshift-gitops-operator/kustomization.yaml
@@ -11,8 +11,19 @@ labels:
     app.kubernetes.io/component: cluster-management
     app.kubernetes.io/part-of: platform-management
 
+# NOTE: setting chart home as a workaround for https://github.com/argoproj/argo-cd/issues/8008
+helmGlobals:
+  chartHome: charts/openshift-gitops-operator
 helmCharts:
 - name: operators-installer
   repo: https://redhat-cop.github.io/helm-charts
   version: 3.0.1
   valuesFile: values.yaml
+
+patches:
+- target:
+    group: operators.coreos.com
+    version: v1alpha1
+    kind: Subscription
+    name: openshift-gitops-operator
+  path: Subscription-patch_openshift-gitops-operator.yaml
