--- a/kustomize/bases/openshift-gitops/kustomization.yaml
+++ b/kustomize/bases/openshift-gitops/kustomization.yaml
@@ -14,13 +14,19 @@ labels:
 resources:
 - ArcoCD_openshift-gitops.yaml
 - AppProject_cluster-management.yaml
-- AppProject_tenant-management.yaml
+- AppProject_default.yaml
 - ClusterRoleBinding_openshift-gitops-acm-cluster-admin.yaml
 - ClusterRoleBinding_openshift-gitops-acm-clusterclaims-admin.yaml
 - ClusterRoleBinding_openshift-gitops-acm-multiclusterhubs-admin.yaml
 - ClusterRoleBinding_openshift-gitops-argo-applicationsets-admin.yaml
 - ClusterRoleBinding_openshift-gitops-projects-admin.yaml
+- ClusterRoleBinding_argo-admin.yaml
+- ClusterRoleBinding_metal3-admin.yaml
+- ClusterRoleBinding_crd-admin.yaml
+- ClusterRole_argo-admin.yaml
 - ClusterRole_open-cluster-management-clusterclaims-admin.yaml
 - ClusterRole_gatekeeper-admin.yaml
+- ClusterRole_metal3-admin.yaml
+- ClusterRole_crd-admin.yaml
 - ClusterRoleBinding_gatekeeper-admin.yaml
 - ClusterRole_projects-admin.yaml
